--- a/queries.css
+++ b/queries.css
@@ -370,13 +370,11 @@
         color: white;
   } 
   .check-flex, .check-flex2{
-    flex-wrap: wrap;
+    flex-direction: column;
     gap: 0px;
+    padding-top: 0px;
   }
-  .check-flex{
-    gap: 31px;
-  }
-  .check-flex2{
-    gap: 1px;
+  .check-img{
+    padding-bottom: 4px;
   }
 }
